--- a/STARS/templates/project-info-target.html
+++ b/STARS/templates/project-info-target.html
@@ -329,7 +329,7 @@
                                                         {% for target in targets %}
                                                         <tr>
                                                             <th><input type="text"  class="form-control" id="target_name" value="{{ target.tid }}" disabled></th>
-                                                            <th><input type="text"  class="form-control" id="target_name" value="{{ target.targetName }}" disabled></th>
+                                                            <th><input type="text"  class="form-control" id="target_name" value="{{ target.targetname }}" disabled></th>
                                                             <th><input type="number" step="0.01"  class="form-control" id="ra" value="{{ target.longitude }}" disabled></th>
                                                             <th><input type="number" step="0.01"  class="form-control" id="dec" value="{{ target.latitude }}" disabled></th>
                                                         </tr>
