--- a/STARS/templates/create-project.html
+++ b/STARS/templates/create-project.html
@@ -168,14 +168,14 @@
                                                 <h3>Project</h3><br><br>
                                               <div class="form-group row">                  
                                                 <div class="col">
-                                                    <label class="" for="project_tittle"> Tittle</label>
-                                                    <input type="text"  class="form-control" id="project_tittle" name="project_tittle" placeholder="">
+                                                    <label class="" for="title"> Tittle</label>
+                                                    <input type="text"  class="form-control" id="title" name="title" placeholder="">
                                                 </div>
                                             </div>
                                             <div class="form-group row">                  
                                                 <div class="col">
                                                     <label class="" for="description"> Description</label>
-                                                    <input type="text"  class="form-control" id="description" name="description" placeholder="Description">
+                                                    <input type="text"  class="form-control" id="description" name="description" placeholder="">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
@@ -231,7 +231,7 @@
                                             <div class="form-group row">
                                                 <div class="col">
                                                     <label for="camera_type_(colored,mono)" class="">Camera Type (Colored, Mono)</label>
-                                                    <select class="form-control" id="camera_type_(colored,mono)" name="camera_type_(colored,mono)">
+                                                    <select class="form-control" id="camera_type(colored,mono)" name="camera_type(colored,mono)">
                                                         <option>colored</option>
                                                         <option>mono</option>
                                                     </select>
@@ -253,8 +253,8 @@
                                                     </select>
                                                 </div>
                                                 <div class="col">   
-                                                    <label for="johnson_v" class="">Johnson V</label>
-                                                    <select class="form-control" id="johnson_v" name="johnson_v">
+                                                    <label for="Johnson_V" class="">Johnson V</label>
+                                                    <select class="form-control" id="Johnson_V" name="Johnson_V">
                                                         <option>y</option>
                                                         <option>n</option>
                                                     </select>
