--- a/STARS/templates/create-project.html
+++ b/STARS/templates/create-project.html
@@ -168,7 +168,7 @@
                                                 <h3>Project</h3><br><br>
                                               <div class="form-group row">                  
                                                 <div class="col">
-                                                    <label class="" for="title"> Tittle</label>
+                                                    <label class="" for="title"> Title</label>
                                                     <input type="text"  class="form-control" id="title" name="title" placeholder="">
                                                 </div>
                                             </div>
