--- a/STARS/templates/join-project.html
+++ b/STARS/templates/join-project.html
@@ -158,7 +158,7 @@
                                             <tr>
                                               <th>Info</th>
                                               <th>PID</th>
-                                              <th>Tittle</th>
+                                              <th>Title</th>
                                               <th>Type</th>
                                               <th>Description</th>
                                             </tr>
