--- a/STARS/templates/edit-project-pid.html
+++ b/STARS/templates/edit-project-pid.html
@@ -177,8 +177,8 @@
                                     <form action="submit/">
                                         <div class="form-group row">                  
                                             <div class="col">
-                                                <label class="" for="project_tittle">Project Tittle</label>
-                                                <input type="text"  class="form-control" id="project_tittle" placeholder="">
+                                                <label class="" for="project_title">Project title</label>
+                                                <input type="text"  class="form-control" id="project_title" placeholder="">
                                             </div>
                                         </div>
                                         <div class="form-group row">                  
