--- a/STARS/templates/progress-bar.html
+++ b/STARS/templates/progress-bar.html
@@ -193,8 +193,8 @@
                                                 <h3>Project</h3><br><br>
                                               <div class="form-group row">                  
                                                 <div class="col">
-                                                    <label class="" for="project_tittle">Project Tittle</label>
-                                                    <input type="text"  class="form-control" id="project_tittle" placeholder="">
+                                                    <label class="" for="project_title">Project title</label>
+                                                    <input type="text"  class="form-control" id="project_title" placeholder="">
                                                 </div>
                                             </div>
                                             <div class="form-group row">                  
