--- a/STARS/templates/project-info-target-equipment.html
+++ b/STARS/templates/project-info-target-equipment.html
@@ -158,6 +158,9 @@
                                         <li class="nav-item">
                                           <a class="nav-link text-white" data-toggle="pill" href="#target">Target</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-white" data-toggle="pill" href="#equipment">Equipment</a>
+                                          </li>
 
                                     </ul>
                                     <br><br>
@@ -309,9 +312,7 @@
                                                     </select>
                                                 </div>
                                             </div>
-                                            
-
-                                            </div>
+                                        </div>
                                             <div id="target" class="container tab-pane fade"><br>
                                                 <h3>Target</h3><br><br>
                                                 <table class="text-white table table-active table-bordered" id="target_table">
@@ -327,6 +328,32 @@
                                                     </thead>
                                                     <tbody>
                                                         {% for target in targets %}
+                                                        <tr>
+                                                            <th><input type="text"  class="form-control" id="target_name" value="{{ target.tid }}" disabled></th>
+                                                            <th><input type="text"  class="form-control" id="target_name" value="{{ target.targetname }}" disabled></th>
+                                                            <th><input type="number" step="0.01"  class="form-control" id="ra" value="{{ target.longitude }}" disabled></th>
+                                                            <th><input type="number" step="0.01"  class="form-control" id="dec" value="{{ target.latitude }}" disabled></th>
+                                                        </tr>
+                                                        {% endfor %}
+                                                    </tbody>
+                                                </table>
+                                                
+                                            </div>
+                                            <div id="equipment" class="container tab-pane fade"><br>
+                                                <h3>Equipment</h3><br><br>
+                                                <table class="text-white table table-active table-bordered" id="target_table">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>TID
+                                                            </th>
+                                                            <th>Target
+                                                            </th>
+                                                            <th>RA (Longitude)</th>
+                                                            <th>Dec (Latitude)</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        {% for equipment in equipments %}
                                                         <tr>
                                                             <th><input type="text"  class="form-control" id="target_name" value="{{ target.tid }}" disabled></th>
                                                             <th><input type="text"  class="form-control" id="target_name" value="{{ target.targetname }}" disabled></th>
