--- a/STARS/templates/all-equipment.html
+++ b/STARS/templates/all-equipment.html
@@ -33,7 +33,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="home">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/home">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <!-- <i class="fas fa-laugh-wink"></i> -->
                 </div>
@@ -45,64 +45,58 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="home">
+                <a class="nav-link" href="/home">
                     <i class="fa fa-home"></i>
                     <span>Home</span></a>
             </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider">
-
-            <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
+                <a class="nav-link" href="/join-project">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Project</span>
-                </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Project Management</h6>
-                        <a class="collapse-item" href="my-project">My Project</a>
-                        <a class="collapse-item" href="all-project">All Project</a>
-                        <a class="collapse-item" href="create-project">Create Project</a>
-                    </div>
-                </div>
+                    <span>Join Project</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/manage-project">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Manage Project</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/create-project">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Create Project</span></a>
             </li>
             <hr class="sidebar-divider">
-
-            <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link" href="/equipment">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Equipment</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Equipment Management</h6>
-                        <a class="collapse-item" href="my-equipment">My Equipment</a>
-                        <a class="collapse-item" href="all-equipment">All Equipment</a>
-                        <a class="collapse-item" href="add-equipment">Add Equipment</a>
-                    </div>
-                </div>
+                    <span>Equipment</span></a>
             </li>
+
             <hr class="sidebar-divider">
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="schedule">
+                <a class="nav-link" href="/schedule">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Schadule</span></a>
             </li>
             <hr class="sidebar-divider">
-            
+
+            <li class="nav-item">
+                <a class="nav-link" href="/relation">
+                    <i class="fas fa-project-diagram"></i>
+                    <span>Relation</span></a>
+            </li>
+            <hr class="sidebar-divider">
+
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <br><br>
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
+
 
         </ul>
         <!-- End of Sidebar -->
@@ -115,7 +109,7 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow fixed-top">
-                    <a class="navbar-brand text-center text-white" href="home">STAR</a>
+                    <a class="navbar-brand text-center text-white" href="/home">STAR</a>
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
@@ -123,44 +117,25 @@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
-
-                        <!-- <div class="topbar-divider d-none d-sm-block"></div> -->
-
-                        <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline">Admin</span>
-                                <img class="img-profile rounded-circle"
-                                    src={% static "img/avatar.png" %}>
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="profile">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
-                                <div class="dropdown-divider"></div>
-
-                                <a class="dropdown-item" href="register">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Register
-                                </a>
-                                <div class="dropdown-divider"></div>
-
-                                <a class="dropdown-item" href="login">
-                                    <i class="fas fa-sign-in-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Log In
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="login">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Log Out
-                                </a>
-                            </div>
+                            <a href="/register" class="nav-link dropdown-toggle">Register</a>
                         </li>
-
+                        {% if request.session.username %}
+                        <li class="nav-item dropdown no-arrow">
+                            <a href="/logout" class="nav-link dropdown-toggle">Log Out</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item dropdown no-arrow">
+                            <a href="/login" class="nav-link dropdown-toggle">Log In</a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item dropdown no-arrow">
+                            <a href="/profile" class="nav-link dropdown-toggle">
+                                <span class="mr-2 d-none d-lg-inline">{{ request.session.username }}</span>
+                                <img class="img-profile rounded-circle"
+                                    src="{% static '/img/avatar.png' %}">
+                            </a>
+                        </li>                        
                     </ul>
 
                 </nav>
@@ -173,15 +148,13 @@
                             <div class="p-5">
                                 <div class="text-center">
                                     <br><br>  
-                                    <h1>All Equipment</h1>
+                                    <h1>Equipment</h1>
                                     <br><br>  
-                                <form action="submit/">
                                     <div class="table-responsive">
                                         <table class="text-white table table-active table-bordered">
                                           <thead>
                                             <tr>
                                               <th>EID</th>
-                                              <th>User</th>
                                               <th>Site</th>
                                               <th>Longitude</th>
                                               <th>Latitude</th>
@@ -193,6 +166,7 @@
                                               <th>Aperture</th>
                                               <th>Fo V</th>
                                               <th>Pixel Scale</th>
+                                              <th>Tracking Accuracy</th>
                                               <th>Limiting Magnitude (MAG)</th>
                                               <th>Elevation Limit (DEG)</th>
                                               <th>Mount Type (German, Fork, Theodolite)</th>
@@ -209,55 +183,50 @@
                                             </tr>
                                           </thead>
                                           <tbody>
+                                              {% for equipment in equipments %}
                                             <tr>
-                                              <td>0</td>
-                                              <td>Jeremy</td>
-                                              <td>University of Tokyo Atacama Observatory</td>
-                                              
-                                              <td>1.0688955298553253</td>
-                                              <td>255.83816116433158</td>
-                                              <td>2.721238841447313</td>
-                                              <td>0.18709646832735033</td>
-                                              <td>15.540565310137962</td>
-                                              <td>21.128172241369946</td>
-                                              <td>fork</td>
-                                              <td>colored</td>
-                                              <td>cooled</td>
-                                              <td>y</td>
-                                              <td>y</td>
-                                              <td>y</td>
-                                              <td>y</td>
-                                              <td>y</td>
-                                              <td>n</td>
-                                              <td>n</td>
-                                            </tr>
-                                            <tr>
-                                                <td>1</td>
-                                                <td>Jason</td>
-                                                <td>James Ax Observatory</td>
-                                                <td>1.0688955298553253</td>
-                                                <td>255.83816116433158</td>
-                                                <td>2.721238841447313</td>
-                                                <td>0.18709646832735033</td>
-                                                <td>15.540565310137962</td>
-                                                <td>21.128172241369946</td>
-                                                <td>fork</td>
-                                                <td>colored</td>
-                                                <td>cooled</td>
-                                                <td>y</td>
-                                                <td>y</td>
-                                                <td>y</td>
-                                                <td>y</td>
-                                                <td>y</td>
-                                                <td>n</td>
-                                                <td>n</td>
+                                              <td>{{ equipment.eid }}</td>
+                                              <td>{{ equipment.site }}</td>
+                                              <td>{{ equipment.longitude }}</td>
+                                              <td>{{ equipment.latitude }}</td>
+                                              <td>{{ equipment.altitude }}</td>
+                                              <td>{{ equipment.time_zone }}</td>
+                                              <td>{{ equipment.daylight_saving }}</td>
+                                              <td>{{ equipment.water_vapor }}</td>
+                                              <td>{{ equipment.light_pollution }}</td>
+                                              <td>{{ equipment.aperture }}</td>
+                                              <td>{{ equipment.fov }}</td>
+                                              <td>{{ equipment.pixel_scale }}</td>
+                                              <td>{{ equipment.tracking_accuracy }}</td>
+                                              <td>{{ equipment.limiting_magnitude }}</td>
+                                              <td>{{ equipment.elevation_limit }}</td>
+                                              <td>{{ equipment.mount_type }}</td>
+                                              <td>{{ equipment.camera_type_colored_mono }}</td>
+                                              <td>{{ equipment.camera_type_cooled_uncooled }}</td>
+                                              <td>{{ equipment.johnson_b }}</td>
+                                              <td>{{ equipment.johnson_v }}</td>
+                                              <td>{{ equipment.johnson_r }}</td>
+                                              <td>{{ equipment.sdss_u }}</td>
+                                              <td>{{ equipment.sdss_g }}</td>
+                                              <td>{{ equipment.sdss_r }}</td>
+                                              <td>{{ equipment.sdss_i }}</td>
+                                              <td>{{ equipment.sdss_z }}</td>
+
                                               </tr>
+                                              {% endfor %}
                                           </tbody>
                                         </table>
+                                        <div class="form-group row">
+                                            <div class="col-4"></div>
+                                        <div class="col-4">
+                                            <br><br>
+                                            <a href="/equipment/add-equipment" class="btn btn-outline-light btn-block">Add  Equipment</a>
+                                            <br><br>
+                                        </div>
+                                        </div>
                                         <br><br><br><br><br><br><br><br><br><br><br><br><br>
                                     </div>   
                                     </div>
-                                </form>
                                 </div>
                             </div>
                         </div>
