--- a/STARS/templates/add-equipment.html
+++ b/STARS/templates/add-equipment.html
@@ -179,7 +179,10 @@
                                             </div>
                                             <div class="col">
                                                 <label class="" for="daylight_saving">Daylight Saving</label>
-                                                <input type="text"  class="form-control" id="daylight_saving" name="daylight_saving" placeholder="">
+                                                <select class="form-control" id="daylight_saving" name="daylight_saving">
+                                                    <option>y</option>
+                                                    <option>n</option>
+                                                </select>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -308,7 +311,7 @@
                                         </div>
                                         <div>
                                             <br><br>
-                                            <button type="submit" class="btn btn-outline-light btn-block">Add</button>
+                                            <button type="submit" class="btn btn-outline-light btn-block">Add Equipment</button>
                                         </div>
                                         
                                     </form>
