--- a/STARS/templates/project-info-target-equipment.html
+++ b/STARS/templates/project-info-target-equipment.html
@@ -358,7 +358,7 @@
                                                             <th><input type="text"  class="form-control" id="target_name" value="{{ equipment.uid }}" disabled></th>
                                                             <th><input type="text"  class="form-control" id="target_name" value="{{ equipment.username }}" disabled></th>
                                                             <th><input type="number" step="0.01"  class="form-control" id="ra" value="{{ equipment.eid }}" disabled></th>
-                                                            <th><input type="number" step="0.01"  class="form-control" id="dec" value="{{ target.site }}" disabled></th>
+                                                            <th><input type="text" class="form-control" id="dec" value="{{ equipment.site }}" disabled></th>
                                                         </tr>
                                                         {% endfor %}
                                                     </tbody>
