--- a/STARS/templates/forgot-password.html
+++ b/STARS/templates/forgot-password.html
@@ -92,7 +92,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="schedule">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Schadule</span></a>
+                    <span>schedule</span></a>
             </li>
             <hr class="sidebar-divider">
 
