--- a/STARS/templates/not_use/register1.html
+++ b/STARS/templates/not_use/register1.html
@@ -95,7 +95,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="create-project">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Schadule</span></a>
+                    <span>schedule</span></a>
             </li>
             <hr class="sidebar-divider">
 
